styles: fix bottom bar spacing issue

--- a/Backend/frontend/src/components/ProfilePage/profilePage.module.css
+++ b/Backend/frontend/src/components/ProfilePage/profilePage.module.css
@@ -34,6 +34,6 @@
 
 @media (width<=1007px) {
   .profile-page {
-    height: calc(100svh - 2 * var(--navbar-height));
+    height: calc(100svh - 1.8 * var(--navbar-height));
   }
 }
